# enterprise_agent_platform_engineering

./: .gitignore  CONTRIBUTING.md  PLAN.md  README.md  README_en.md  README_zh.md  mkdocs.en.yml  mkdocs.yml  requirements-docs.txt
mini-platform/: README.md  pyproject.toml
mini-platform/core/: __init__.py
mini-platform/core/eval/: __init__.py
mini-platform/core/gateway/: __init__.py
mini-platform/core/guardrails/: __init__.py
mini-platform/core/memory/: __init__.py  store.py  working.py
mini-platform/core/observability/: __init__.py
mini-platform/core/planner/: __init__.py  base.py  config.py  plan_execute.py  planner.py  react_planner.py
mini-platform/core/policy/: __init__.py
mini-platform/core/protocol/: __init__.py  adapter.py
mini-platform/core/rag/: __init__.py
mini-platform/core/registry/: __init__.py  errors.py  openai_tools.py  schema_validate.py  tool_registry.py
mini-platform/core/runtime/: __init__.py  approval.py  checkpoint.py  demo_tools.py  handoff_tool.py  run_loop.py  run_models.py  run_scope.py  sse.py  state_machine.py  stub_planner.py
mini-platform/infra/: __init__.py
mini-platform/infra/lakehouse/: __init__.py  engine_selector.py
mini-platform/infra/metadata/: __init__.py
mini-platform/infra/semantic_layer/: __init__.py
mini-platform/infra/vectorstore/: __init__.py
mini-platform/projects/01-min-runtime/: README.md  run.py
mini-platform/projects/12-lakehouse-engine/: run.py  (+1 more)
mini-platform/tests/: test_lakehouse_engine_selector.py  test_mcp_db.py  test_multi_agent_workflow_run.py  test_registry.py  test_runtime.py
(+257 files in other folders)
