[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-enterprise-agent-platform"
version = "0.1.0"
description = "Reference implementation for the 'Enterprise Agent Platform Engineering' book"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "agent_platform_book contributors"}]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "infra*", "tools*"]
# projects/ 实战项目通过 run.py 的 sys.path 引用 core/ 与 tools/
